--- a/Css/style.css
+++ b/Css/style.css
@@ -45,7 +45,16 @@ main {
   /* position: relative; */
 }
 
-.container > .pages {
+.pages {
+  display: flex;
+  justify-content: space-between;
+height: 100%;
+margin-left: auto;
+margin-right: auto;
+align-items: center;
+}
+
+.container > .pages > .leftPages {
   display: flex;
   gap: 25px;
   padding-top: 9.5px;
@@ -53,12 +62,41 @@ main {
   align-items: center;
 }
 
-.quotesContainer > .pages {
+.quotesContainer > .pages > .leftPages {
   display: flex;
   gap: 25px;
   padding-top: 9.5px;
   padding-bottom: 9.5px;
   align-items: center;
+}
+
+.rightPages {
+  display: flex;
+flex-direction: row;
+align-items: center;
+gap: 24px;
+}
+
+.pageLink {
+  font-size: 12px;
+color: #fff;
+text-decoration: none;
+font-weight: 700;
+cursor: pointer;
+}
+
+.userIcon {
+  display: flex;
+  align-items: center;
+justify-content: center;
+}
+
+
+
+.manageBooking {
+  display: flex;
+  align-items: center;
+justify-content: center;
 }
 
 .active {
@@ -940,7 +978,7 @@ ul {
   box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.12);
   /* z-index: 10; */
   left: 815px;
-  bottom: 20px;
+  bottom: 24px;
   overflow-y: scroll;
 }
 
@@ -2535,4 +2573,42 @@ li {
   line-height: 1.29;
   color: #fff;
   margin-left: 12px;
+}
+
+._3hMIKUaq-ANswvuxWaMAfz {
+  padding-top: 32px;
+  justify-content: center;
+  cursor: pointer;
+}
+
+._1bg-3j4DyVb_Cg7yoh1Let {
+  display: flex;
+  flex-direction: column;
+}
+
+._2eI_bbHCWG4Xotp-v_qaGt {
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: .69px;
+  text-align: left;
+  color: #7e7e8c;
+}
+
+._8S98Q-rRAWl5EFaGEiejs {
+  width: 185px;
+  height: 40px;
+  background-color: #f8f4f4;
+  margin-top: 12px;
+  justify-content: center;
+  border: 1px solid #465986;
+  border-radius: 3px;
+}
+
+._1PWZAhUPf-4UD5koGTR5jq {
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1.67;
+  letter-spacing: 1.5px;
+  text-align: center;
+  color: #455888;
 }
